# ua_vis

./: abstractions.txt
ComputerVision/: CMakeLists.txt  conanfile.txt
ComputerVision/src/: CMakeLists.txt  Parameter.cpp  Transform.cpp  TransformDesigner.cpp  Window.cpp
ComputerVision/src/include/ComputerVision/: Component.hpp  Image.hpp  Parameter.hpp  Transform.hpp  TransformDesigner.hpp
ComputerVision/test/: CMakeLists.txt  ComponentTests.cpp
data/database/: training_examples.sqlite3
data_preparation/: label_map.pbtxt
training/: schema.sql  settings.yaml
training/collection/: persistence.py
training/prototype/: camera.py  training_gui_prototype.py
training/src/: camera.py  collection_gui.py  controller.py  database.py  labeler.py  main.py  models.py  property.py  training_example.py  view.py  views.py
training/src2/: controller.py  persistence.py  training_example.py  view.py
training_examples/: settings.yaml
